Fix layout issue on mobile devices.

--- a/data/styles.css
+++ b/data/styles.css
@@ -368,7 +368,7 @@ img
 {
     display: inline;
     width: auto;
-    max-height: 80vh;
+    max-height: 80%;
     margin: 0;
     vertical-align: middle;
     user-select: none;
